setup auth in the backend, just need to update TaskController to use jwt again.

--- a/backend/TaskFlow.Api/appsettings.Development.json
+++ b/backend/TaskFlow.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "SecretKey": "your-actual-dev-secret-key-32-characters-minimum-for-security"
   }
 }
