--- a/backend/TaskFlow.Api/appsettings.json
+++ b/backend/TaskFlow.Api/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TaskFlowDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "SecretKey": "your-super-secret-key-at-least-32-characters-long-for-security",
+    "ExpirationMinutes": 60
   }
 }
