--- a/backend/TaskFlow.Api/DockerFile
+++ b/backend/TaskFlow.Api/DockerFile
@@ -1,4 +1,4 @@
-wha# Use the official .NET SDK image for build
+# Use the official .NET SDK image for build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
